css/styles.css
html {
  box-sizing: border-box;
  margin: 0;
  background-color: rgb(4, 70, 75);
}
*,
*:before,
*:after {
  box-sizing: inherit;
  margin: 0;
}

/* * {
  border: 1px dashed red;
  min-height: 10px;
} */

header {
  background: rgb(30, 199, 185);
  margin: 0;
  padding: 0;
  display: inline-block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 1;
}

/* .nav {
  background: rgb(30, 199, 185);
  margin: 0 auto;
  padding: 10px 0;
  display: inline-block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 1;
} */

.navbar,
.navbar-nav {
  background: rgb(30, 199, 185) !important;
  padding: 0;
  text-align: center;
}

.navbar-brand {
  text-align: left;
}

#menu-logo img {
  /* text-align: left; */
  height: 50px;
  width: 80px;
  /* display: inline-block; */
  /* position: relative; */
  /* left: 0; */
  /* top: -8px; */
  /* margin: 15px 5px 10px 10px; */
  padding: 0;
  object-fit: cover;
  object-position: center;
}

/* menu {
  margin: 15px;
  padding-inline-start: 0;
  display: inline-block;
  position: absolute;
  top: 0;
  left: 25%;
  text-align: center;
} */
/* .table-style {
  font-family: Nunito, sans-serif;
  -webkit-text-stroke: 0px;
  font-size: 18px;
  text-align: center;
  display: inline-block;
  margin: 0px 15px 0px 15px;
  padding: 0px 10px 0px 10px;
}

td {
  margin: 0px 15px 0px 15px;
  padding: 0px 10px 0px 10px;
} */

/*----styling for menu links------*/
a:link,
a:visited,
a:active {
  color: #fff !important;
  text-decoration: none;
}
.table-style a:hover {
  color: rgb(238, 224, 32);
}

/*----styling for menu icons------*/
#menu-icons {
  /* position: relative;
  top: 1px;
  left: 45%; */
  text-align: right;
}
@media (max-width: 768px) {
  #menu-icons {
    position: relative;
    /* top: 1px;
    left: 45%; */
    width: 100% !important;
    text-align: center;
  }
}

#menu-icons img {
  height: 30px;
  margin: 5px 5px 0px 5px;
}

/*------Body--------*/

.row {
  background-color: rgb(4, 70, 75);
}
.col-6 {
  padding: 0 !important;
}
/* INDEX LEFT SIDE */
#index-left {
  /* padding: 0; */
  /* margin: 0; */
  text-align: center;
}

#waves-img {
  object-fit: cover;
  object-position: center;
  /* width: 100%; */
  height: 100vh;
  justify-content: center;
  /* height: 400px; */
  text-align: center;
  /* justify-content: left;
  width: 100%;
  height: 100%; */

  margin: 0;
}
/* INDEX RIGHT SIDE */
#index-right {
  text-align: center;
}

/* center Hydro logo here */
#logo-index {
  margin-top: 30%;
  position: relative;
  /* left: 25%; */
  opacity: 1;
  /* justify-content: center; */
  text-align: center;
}

/* #logo-left {
  display: inline-block;
  position: relative;
  right: 25%;
  top: 200px;
} */

/* .email {
  color: rgb(30, 199, 185);
  text-decoration: none;
} */
a {
  text-decoration: none;
}
header a:hover {
  color: rgb(229, 255, 0) !important;
  text-decoration: none;
}

body {
  /* background-color: rgb(4, 70, 75); */
  margin-top: 0;
  margin-bottom: 0;
  font-family: Montserrat, Nunito, sans-serif;
  /* display: inline; */
}

/*------This make the text slide left--------*/
.slide-left {
  width: 100%;
  overflow: hidden;
}
.slide-left {
  animation: slide-left 1.25s;
}

@keyframes slide-left {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}
/*------This make the text slide up--------*/
.slide-up {
  overflow: hidden;
}
.slide-up {
  animation: 1.25s slide-up;
  margin-top: 0%;
}

@keyframes slide-up {
  from {
    margin-top: 100%;
    height: 300%;
  }

  to {
    margin-top: 0%;
    height: 100%;
  }
}

/*------This margin holds the text to the right side--------*/

h1 {
  /* margin: 0% 10% 0 60%; */
  color: ivory;
}

p {
  font-size: 20px;
  margin: 0 5% 0 5%;
  color: ivory;
}

form {
  font-size: 20px;
  margin: 0 5% 0 5%;
  color: ivory;
}
#contact #index-right {
  text-align: center;
  margin: 100px 0 0 0;
  /* display: table-cell; */
  /* vertical-align: middle; */
}

/*------Footer--------*/

footer {
  background: rgb(30, 199, 185);
  padding: 5px 0;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  opacity: 1;
}
#footer-text {
  font-size: 15px;
  font-weight: bold;
  color: rgb(20, 33, 47);
  text-align: center;
}
#footer-text a:link {
  font-size: 15px;
  color: rgb(20, 33, 47) !important;
  text-decoration: none;
}
#footer-text a:hover {
  color: blue !important;
  text-decoration: none;
}

